--- a/notebooks/Colab_com_drive.ipynb
+++ b/notebooks/Colab_com_drive.ipynb
@@ -29,6 +29,7 @@
         "- visualizar a coluna temperatura num gráfico de linha.\n",
         "\n",
         "__Como Importar esse notebook para o colab:__\n",
+        "1. Acessar o google Colab\n",
         "1. `Arquivo > Abrir Notebook`\n",
         "1. Clicar aba GitHub\n",
         "1. Inserir a URL: https://github.com/fscheidt/iotdb-21/blob/master/notebooks/Colab_com_drive.ipynb\n",
