update: Colab_com_mongodb.ipynb

--- a/notebooks/Colab_com_mongodb.ipynb
+++ b/notebooks/Colab_com_mongodb.ipynb
@@ -19,17 +19,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Usando o mongodb no Colab\n",
+        "# Setup do mongodb no Colab\n",
         "Para usar o mongodb no Colab precisamos realizar as seguintes etapas:\n",
         "- Instalar o mongodb (uma única vez)\n",
+        "- Iniciar o serviço\n",
+        "- Baixar o dataset books.json\n",
+        "- Importar pymongo\n",
+        "- Testar conexão\n",
         "\n",
-        "\n",
-        "__Objetivos:__\n",
-        "- montar o drive no colab\n",
-        "- baixar o arquivo csv do dataset telemetry e salvar numa pasta do drive.\n",
-        "- carregar o arquivo no pandas dataframe\n",
-        "- visualizar a coluna temperatura num gráfico de linha.\n",
-        "\n"
+        "__Como Importar esse notebook para o colab:__\n",
+        "1. Abrir o Colab\n",
+        "1. `Arquivo > Abrir Notebook`\n",
+        "1. Clicar aba GitHub\n",
+        "1. Inserir a URL: https://github.com/fscheidt/iotdb-21/blob/master/notebooks/Colab_com_mongodb.ipynb\n",
+        "1. Clicar em: `notebooks/Colab_com_mongodb.ipynb`\n",
+        "1. Quando terminar de carregar fazer uma cópia no drive para habilitar edição: `Arquivo > Salvar uma cópia no Drive`\n"
       ],
       "metadata": {
         "id": "HLtszfQsNi3X"
@@ -38,7 +42,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Instalação do mongodb no Colab\n",
+        "## Instalação do mongodb\n",
         "Executar a sequência de comandos abaixo apenas uma vez para configurar o mongodb e criar o database `booksdb`"
       ],
       "metadata": {
